# AuxeBot

./: .gitignore  Help.py  HelpMenuDosc.py  LICENSE  Procfile  README.md  Test.py  Utils.py  deploy.sh  install.cmd  install.sh  main.py  pyproject.toml  reaction_roles.json  requirements.txt  settings.yml  web.py
.github/workflows/: main.yml
AuxeBot/: Bot.py  Logger.py  Test.py  Utils.py  main.py
AuxeBot/cogs/: Error.py  Fun.py  GuildSpecific__Minecraft.py  GuildSpecific__csak_a_per.py  Guild__Minecraft.py  Guild__VALORANT_HUN.py  Guild__csak_a_per.py  Help.py  Levelling.py  Logging.py  Moderation.py  Music.py  Poll.py  ReactionRoles.py  template.txt
cogs/: Error.py  Fun.py  GuildSpecific__csak_a_per.py  Help.py  HelpTest.py  Levelling.py  Logging.py  Moderation.py  Music.py  MusicRewrite.py  Poll.py  ReactionRoles.py  Test.py  template.txt
cogs/Levelling/: data.json
cogs/disabled/: Levelling.py  Logging.py  Poll.py
data/: settings.yml  uptime_ping.json  web.py
web/: index.html  style.css
