[tool.poetry]
name = "Roboty_ver_0.9.2"
version = "0.9.2"
description = "A private discord bot for my guild"
authors = ["Pintér Mór <pintermor9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
